--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           </main>
           <footer>
             <p>Створено як навчальний проєкт курсу "Знайомство з ІТ: тестдрайв професій" від Prometheus.</p>
-            <p>Andrii Heichuk</p>
+            <p>Nick Nickolaenko</p>
           </footer>
     </div>
 </body>
