--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                                 </label>
                                 <label>
                                     CVV*
-                                    <input type="text" required name="cardCVV" placeholder="xxx">
+                                    <input type="text" required name="cardCVV" placeholder="xxxx">
                                 </label>
                             </div>
                         </div>
